# is-goose

./: .gitignore  404.html  CUSTOM_DISTROS.md  MCP_DEVELOPER_GUIDE.md  PRD_DESKTOP_I18N_RU.md  PRD_INSIGHTSTREAM_DEMO_DESKTOP_RU.md  PRD_desktop-cicd-msi-dmg-signing.md  index.html  offer.html  sitemap.xml
.github/workflows/: build-notify.yml  bundle-desktop-installers.yml  bundle-desktop-intel.yml  bundle-desktop-main-unsigned.yml  bundle-desktop-windows.yml  bundle-desktop.yml  ci.yml  deploy-docs-and-extensions.yml  pr-comment-bundle-intel.yml  pr-smoke-test.yml  rebuild-skills-marketplace.yml  release.yml
agent/: .gitignore  AGENTS.md  README.md  biome.json  forge.config.ts  knip.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.electron.main.config.ts  vite.electron.preload.config.ts  vite.electron.renderer.config.ts  vite.server.config.ts  vitest.config.ts
agent/docs/: ARCHITECTURE.md
agent/docs/requirements/: GOOSE_SERVER_OPENAPI.json
agent/docs/tasks/done/: feature.001.simplicity-first-desktop-skeleton.md
agent/docs/tasks/todo/: feature.002.logging-policy-and-implementation.md  feature.003.desktop-ipc-contract-rfc.md  feature.004.desktop-deeplink-protocol-rfc.md  feature.005.desktop-settings-contract-rfc.md  feature.006.desktop-send-logs-via-server-stub.md  feature.007.client-managed-per-key-secrets-and-server-env-injection.md
agent/requirements/: CODE_INTERPRETER_REQUIREMENTS.md  DESKTOP_PACKAGING_REQUIREMENTS.md  DEVELOPER_EXTENSION_REQUIREMENTS.md  GOOSE_CORE_REQUIREMENTS.md  GOOSE_SERVER_OPENAPI.json  INLINE_PYTHON_REQUIREMENTS.md  SERVER_REQUIREMENTS.md
agent/scripts/: generate-openapi-examples.ts  icons.mjs  prepare-desktop-resources.ts  vitest-notify-reporter.mjs
agent/src/: index.ts
agent/src/desktop/: README.md  devProbe.ts  main.ts  preload.ts  windowsPreflight.ts
agent/src/logging/: index.ts
agent/src/server/: app.ts  index.ts  responder.ts  routes.ts  runtime.ts  spec.ts
agent/tests/: agent.runtime.skeleton.test.ts  desktop.config.test.ts  desktop.integration.test.ts  desktop.settings.ui.test.tsx  index.test.ts  secrets.env-map.test.ts  secrets.store.test.ts  server-contract.test.ts  server.test.ts  settings-store.test.ts  ui.core.test.tsx  ui.kit.exports.test.tsx
agent/tests/contract/: hooks.cjs
agent/tests/e2e/: desktop.smoke.spec.ts
assets/css/: styles.e7562744.css
assets/js/: 1df93b7f.a09bc1fc.js  780.90a8bcdd.js  a7456010.034e844c.js  b609d0ff.7272a706.js  main.a641ba20.js  runtime~main.df725ead.js
crates/goose/: Cargo.toml
crates/goose-cli/src/: cli.rs
crates/goose-server/: Cargo.toml
crates/goose-server/src/: openapi.rs
crates/goose/examples/: agent.rs
crates/goose/src/: lib.rs  prompt_template.rs
crates/goose/src/agents/: prompt_manager.rs  reply_parts.rs
crates/goose/src/agents/platform_extensions/: mod.rs
crates/goose/src/agents/snapshots/: goose__agents__prompt_manager__tests__basic.snap  goose__agents__prompt_manager__tests__one_extension.snap  goose__agents__prompt_manager__tests__typical_setup.snap
crates/goose/src/config/: declarative_providers.rs  mod.rs
crates/goose/src/prompts/: system.md
crates/goose/src/providers/: init.rs  local_inference.rs  mod.rs  openai.rs
crates/goose/src/providers/canonical/data/: canonical_mapping_report.json  canonical_models.json
crates/goose/src/providers/formats/: mod.rs  openai.rs  openai_responses.rs  tool_schema.rs
crates/goose/src/providers/local_inference/: non_windows_impl.rs  windows_stub.rs
documentation/: docusaurus.config.ts
documentation/scripts/: serve-static.js
scripts/: README.md
site/landing/: docusaurus.config.ts
ui/desktop/: forge.config.ts  forge.rpm.desktop  index.html  openapi.json  package-lock.json  package.json
ui/desktop/src/: main.ts  preload.ts  toasts.tsx
(+86 files in other folders)
